# wozai

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: main.py
docs/: api-contract-v1.md  roadmap.md  security-architecture.md  v1-product-plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  styles.css
frontend/src/api/: client.ts
