[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wozai-backend"
version = "0.1.0"
description = "Backend prototype for wozai.org"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
